# megagame-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.nomad  generate.sh  rust-toolchain
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pgadmin-server.json  post.sh
.github/workflows/: build-docker.yml
backend/: Cargo.toml
django/: .gitignore  manage.py  pyproject.toml
django/megagame_schema/: asgi.py  settings.py  urls.py  wsgi.py
django/tasks/: admin.py  models.py
django/tasks/migrations/: 0001_initial.py
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: category.rs  channel.rs  currency.rs  guild.rs  message_component_data.rs  mod.rs  player.rs  post.rs  prelude.rs  role.rs  task.rs  team.rs  wallet.rs
entity/src/helpers/: mod.rs
frontend/: Cargo.toml
migration/src/: lib.rs  m20221202_160019_discord_models.rs  m20221203_145623_currency.rs  m20221203_145623_initial_database.rs  m20221203_194651_wallet.rs  m20221203_194657_transaction.rs  m20221203_194700_trade.rs  m20221203_195037_team.rs  m20221203_195047_player.rs  m20221203_195057_team.rs  m20221204_194750_task.rs  m20221208_160019_discord_models.rs  m20221208_162731_team_add_category_fk.rs  m20221227_134343_message_component_data.rs
schema/: Cargo.toml
schema/src/: lib.rs
serenity/: Cargo.toml
serenity/src/: handler.rs
serenity/src/commands/: mod.rs
serenity/src/db_wrapper/: mod.rs
serenity/src/task_runner/: mod.rs
serenity/src/task_runner/tasks/: create_dropdown.rs  message_user.rs  mod.rs
serenity/src/task_runner/tasks/button/: mod.rs
serenity/src/task_runner/tasks/category/: mod.rs  tests.rs
serenity/src/task_runner/tasks/channel/: tests.rs
serenity/src/task_runner/tasks/dropdown/: mod.rs
serenity/src/task_runner/tasks/test_helpers/: mod.rs
serenity/src/task_runner/tasks/thread/: mod.rs
shared/: Cargo.toml
src/: handler.rs  main.rs
src/commands/: fake_trade.rs  initialize_game.rs  mod.rs  nuke.rs
src/console/: main2.rs  mod.rs
src/console/app/: actions.rs  mod.rs  state.rs  ui.rs
src/console/inputs/: events.rs  key.rs
src/console/io/: handler.rs
src/db_wrapper/: helpers.rs  mod.rs
src/game_mechanics/: mod.rs
src/game_mechanics/menu/: mod.rs
src/game_mechanics/team/: mod.rs
src/schema/: mod.rs  prelude.rs  tasks_task.rs
src/task_runner/: mod.rs
src/task_runner/task_queue/: mod.rs
src/task_runner/task_queue/database/: mod.rs
src/task_runner/task_queue/memory/: mod.rs
src/task_runner/tasks/: change_team.rs  create_buttons.rs  create_category.rs  create_category_channel.rs  create_channel.rs  create_dropdown.rs  create_message.rs  create_role.rs  create_team_channel.rs  create_team_voice_channel.rs  create_thread.rs  manage_user.rs  message_user.rs  mod.rs
src/task_runner/tasks/button/: mod.rs
src/task_runner/tasks/category/: mod.rs  tests.rs
src/task_runner/tasks/channel/: mod.rs  tests.rs
src/task_runner/tasks/dropdown/: mod.rs
src/task_runner/tasks/message/: message_component.rs  mod.rs
src/task_runner/tasks/role/: mod.rs
src/task_runner/tasks/test_helpers/: mod.rs
src/task_runner/tasks/thread/: mod.rs
src/tasks/: message.rs  mod.rs  task.rs
