[package]
name = "megagame-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Discord
serenity = { git = "https://github.com/serenity-rs/serenity", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"] }
sea-orm = { version = "0.10.4", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-postgres" ], default-features = false }

# Async
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.53"

# Tooling
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.78"

# Extra
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.5.4"