[workspace]
members = [
    "migration",
    "entity",
    "frontend",
    "backend",
    "shared",
    "serenity",
]

# [[bin]]
# name = "frontend"
# path = "frontend/src/main.rs"

# [[bin]]
# name = "backend"
# path = "backend/src/main.rs"

# MoonZoon
# [workspace.dependencies]
# moon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
# zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }