[package]
name = "megagame-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "migration",
    "entity",
]

[dependencies]

# Discord
serenity = { git = "https://github.com/angelonfira/serenity", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api", "builder"], branch = "next" }
sea-orm = { version = "0.10.4", features = [ "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-postgres" ], default-features = false }

# Async
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.53"

# Tooling
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.78"

# Extra
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.5.4"
rand = "0.8.5"
eyre = "0.6"

# Local
entity = { path = "entity" }
migration = { path = "migration" }
uuid = "1.2.2"

# TUI
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.25.0"
tui-logger = "0.8.1"
log = "0.4.17"
